src/test/deca/context/invalid/custom/option/asm/asm3.deca
class TestAsm {
    void methodAsm() asm("  WSTR \"toto\"");

    void methodAsm2() asm("  WSTR \"abc\"");
}
{
    TestAsm test = new TestAsm();
    TestAsm test2 = new TestAsm();
    te.methodAsm();
    test2.methodAsm2();
}